--- a/UTM.Gamepad.Web/Views/Home/Index.cshtml
+++ b/UTM.Gamepad.Web/Views/Home/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Home Page";
 }
 
 <!-- banner section start -->
